ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: car-serv
  labels:
    name: car-serv
