car-serv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-serv-deployment
  namespace: car-serv
spec:
  replicas: 2
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: car-serv-deployment
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: car-serv-deployment
      namespace: car-serv
    spec:
      containers:
        - image: elroydevops/car-serv
          imagePullPolicy: Always
          name: car-serv
          ports:
            - containerPort: 80
              name: tcp
              protocol: TCP
          resources: {}
